<resources>
    <string name="app_name">Drink Gadget</string>
    <string name="error_message">No widgets detected.</string>
    <string name="widget_disconnected">Widget disconnected</string>
    <string name="ready_title">I am cold!</string>
    <string name="ready_message">Your drink is ready! Enjoy it!</string>
    <string name="frozen_title">Let me out!</string>
    <string name="frozen_message">Your drink is near to be frozen! Please take it out!</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="temp_celsius">%1$s °C</string>
    <string name="temp_fahrenheit">%1$s °F</string>
    <string name="unit_of_temperature">Unit of temperature:</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="settings">SETTINGS</string>
    <string name="please_select_your_settings">Please select your settings</string>
    <string name="select_when_the_drink_is_ready_for_you">Select when the drink is ready for you.</string>
    <string name="version">Version %1$s</string>
    <string name="error_bluetooth_message">Check that Bluetooth is enabled.</string>
    <string name="widgets_detected">Drinks detected</string>
    <string name="battery">Battery</string>
    <string name="back">Close</string>
    <string name="temperature">Temperature</string>
    <string name="percentage">%1$s %%</string>

</resources>
