<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- The navigation drawer -->
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:id="@+id/drawerPane"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        android:padding="8dp" >


        <RelativeLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="35dp">


            <ImageView
                android:id="@+id/settings_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_preferences"/>

            <LinearLayout
                android:id="@+id/drawer_settings_info"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/settings_image"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/drawer_profile_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:text="@string/settings"
                    android:ellipsize="end"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/drawer_profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="4dp"
                    android:textColor="#fff"
                    android:text="@string/please_select_your_settings"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/temperature_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_container"
            style="@style/AppTheme.DrawerTitle"
            android:text="@string/unit_of_temperature" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temperature_text"
            android:id="@+id/temperatureRadioGroup"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:checkedButton="@+id/celsius" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/celsius"
                android:textColor="#fff"
                android:text="@string/celsius" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fahrenheit"
                android:textColor="#fff"
                android:text="@string/fahrenheit" />

        </RadioGroup>

        <TextView
            android:id="@+id/temp_selected_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temperatureRadioGroup"
            style="@style/AppTheme.DrawerTitle"
            android:text="@string/select_when_the_drink_is_ready_for_you"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_below="@+id/temp_selected_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/temp_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/temp_selected"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>