<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/myContainer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <at.grabner.circleprogress.CircleProgressView
            android:id="@+id/circleViewTemperature"
            android:layout_width="150dp"
            android:layout_height="150dp"
            CircleProgressView:cpv_autoTextSize="true"
            CircleProgressView:cpv_barWidth="35dp"
            CircleProgressView:cpv_innerContourSize="0dp"
            CircleProgressView:cpv_maxValue="100"
            CircleProgressView:cpv_outerContourSize="0dp"
            CircleProgressView:cpv_rimWidth="35dp"
            CircleProgressView:cpv_seekMode="false"
            CircleProgressView:cpv_showUnit="true"
            CircleProgressView:cpv_textScale="1"
            CircleProgressView:cpv_unit="°C"
            CircleProgressView:cpv_unitPosition="right_top"
            CircleProgressView:cpv_unitScale="1"
            CircleProgressView:cpv_value="0"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTemperature"
            android:layout_below="@+id/circleViewTemperature"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <at.grabner.circleprogress.CircleProgressView
            android:id="@+id/circleViewBatteryLevel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            CircleProgressView:cpv_autoTextSize="true"
            CircleProgressView:cpv_barWidth="15dp"
            CircleProgressView:cpv_innerContourSize="0dp"
            CircleProgressView:cpv_maxValue="100"
            CircleProgressView:cpv_outerContourSize="0dp"
            CircleProgressView:cpv_rimWidth="15dp"
            CircleProgressView:cpv_seekMode="false"
            CircleProgressView:cpv_showUnit="true"
            CircleProgressView:cpv_textScale="1"
            CircleProgressView:cpv_unit="%"
            CircleProgressView:cpv_unitPosition="right_top"
            CircleProgressView:cpv_unitScale="1"
            CircleProgressView:cpv_value="10"
            android:layout_marginTop="80dp"
            android:layout_below="@+id/circleViewTemperature"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/circleViewBatteryLevel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:id="@+id/textViewBatteryLevel" />

    </RelativeLayout>

    <Button
        android:id="@+id/dialog_buton_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"/>

</LinearLayout>